<resources>
    <string name="app_name">Nox</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_popular">Popular Comics</string>
    <string name="label_seeall">See all</string>
    <string name="label_recent">Recent Comics</string>
    <string name="lable_newest">Newest Comics</string>
    <string name="title_comic">The Witch\'s Throne</string>
    <string name="content_comic">Amazing story and beautiful artwork with unique character designs I\'ve never seen before... I\'m very excited to learn more about the world and the characters that inhabit it!</string>
    <string name="author_comic">-Totally not a Dog-</string>
    <string name="title_list">For the rain days</string>
    <string name="genres">Genres</string>
    <string name="title_notification">Monday\'s Daily Snack</string>

    <string name="title_activity_read_comic">ReadComicActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_episode_main">Winter Night, Ep.2</string>
    <string name="title_episode">Myo-dan</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="loadding">Loading</string>
    <string name="genreComedy">Comedy</string>

    <string name="title_activity_test">TestActivity</string>

    <string-array name="sort_list">
        <item>Popular</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="favorite">Favorite Comics</string>
    <string name="notify">Notify Comics</string>
    <string name="saved">Saved Comics</string>
    <string name="sign_out">Sign out</string>
    <string name="setting">Setting</string>
</resources>
